change refresh button on session visualization
change refresh button on session visualization

--- a/views/index.html
+++ b/views/index.html
@@ -316,7 +316,7 @@
                 data: data
             };
             var html = '<h3 style="margin-top:0;">' +
-                '<div class="right"><button class="btn btn-flat" onclick="show_session(\''+session+'\');"><i class="refresh"></i> Refresh</button></div>' +
+                '<div class="right"><button class="btn btn-flat" onclick="show_session(\''+session+'\');"><i class="material-icons left">refresh</i> Refresh</button></div>' +
                 '<i class="material-icons clickable" onclick="show(\'history\');" style="font-size: 32px;vertical-align: middle;">arrow_back</i> '+session+'' +
             '</h3>';
 
