--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,10 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="/static/vendor/jquery/jquery-3.3.1.min.js"></script>
-    <!--materializecss-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    
+    <!--materialize-->
+    <link rel="stylesheet" href="/static/vendor/materialize/css/materialize.min.css">
+    <script src="/static/vendor/materialize/js/materialize.min.js"></script>
 
     <!-- Moment -->
     <script src="/static/vendor/moment/moment.min.js"></script>
