--- a/views/index.html
+++ b/views/index.html
@@ -69,6 +69,7 @@
     <div id="footer" style="position:fixed;z-index:1;width:100%;bottom:0px;left:0px;background: #444;color:#fff;">
         <div style="float: left;padding:8px;">FlyPi</div>
         <div id="container" style="float: left;padding:8px;"></div>
+        <div style="float: left;padding:8px;"><a href="#" target="_blank" id="link-google-maps">View on Google Maps</a></div>
 
         <div style="position:absolute;right:0;margin-top:6px;display: table;">
             <span id="current_session" style="padding:8px;"></span>
