solved issues with tooltips + close sockets + simulation i configs + mongo

--- a/views/index.html
+++ b/views/index.html
@@ -73,10 +73,10 @@
 
         <div style="position:absolute;right:0;margin-top:6px;display: table;">
             <span id="current_session" style="padding:8px;"></span>
-            <a class="btn-nav" onclick="show('map')" style="color: white;padding:8px;"><i class="material-icons" style="vertical-align: bottom;">place</i></a>
-            <a class="btn-nav" onclick="show('simulator')" style="color: white;padding:8px;"><i class="material-icons" style="vertical-align: bottom;">language</i></a>
-            <a class="btn-nav" onclick="show('history')" style="color: white;padding:8px;"><i class="material-icons" style="vertical-align: bottom;">alarm</i></a>
-            <a id="btn_live_img" class="btn-nav" onclick="open_live_img()" style="color: white;padding:8px;"><i class="material-icons" style="vertical-align: bottom;">image</i></a>
+            <a class="btn-nav tooltipped" onclick="show('map')" style="color: white;padding:8px;" data-position="top" data-tooltip="Map View"><i class="material-icons" style="vertical-align: bottom;">place</i></a>
+            <a class="btn-nav tooltipped" onclick="show('simulator')" style="color: white;padding:8px;" data-position="top" data-tooltip="Live Position"><i class="material-icons" style="vertical-align: bottom;">language</i></a>
+            <a class="btn-nav tooltipped" onclick="show('history')" style="color: white;padding:8px;" data-position="top" data-tooltip="Sessions"><i class="material-icons" style="vertical-align: bottom;">alarm</i></a>
+            <a id="btn_live_img" class="btn-nav tooltipped" onclick="open_live_img()" style="color: white;padding:8px;" data-position="top" data-tooltip="View Image"><i class="material-icons" style="vertical-align: bottom;">image</i></a>
         </div>
     </div>
 
