Added link to main GitHub repo

--- a/views/index.html
+++ b/views/index.html
@@ -67,7 +67,7 @@
     </div>
 
     <div id="footer" style="position:fixed;z-index:1;width:100%;bottom:0px;left:0px;background: #444;color:#fff;">
-        <div style="float: left;padding:8px;">FlyPi</div>
+        <div style="float: left;padding:8px;"><a href="https://github.com/riqui99/flypi" alt="Flypi on GitHub" target="_blank">Flypi</a></div>
         <div id="container" style="float: left;padding:8px;"></div>
         <div style="float: left;padding:8px;"><a href="#" target="_blank" id="link-google-maps">View on Google Maps</a></div>
 
